# angesh-scf

./: Dockerfile  docker-compose.yml  pyproject.toml  run-dashboard.sh  run.sh  start-dashboard.sh  start-simple.sh  start.sh
.github/workflows/: ci.yml
dashboard/: Dockerfile  index.html  package-lock.json
dashboard/src/: App.jsx
deploy/kubernetes/: api-deployment.yaml
docs/: README.md
scripts/: run.py
src/api/: main.py
src/core/scanner/: base.py
src/providers/aws/: scanner.py
tests/: test_scanner.py
