[tool.poetry]
name = "security-compliance-framework"
version = "0.1.0"
description = "Automated Security Compliance Framework for Cloud Infrastructure"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
boto3 = "^1.26.0"
pydantic = " 