[tool.poetry]
name = "security-compliance-framework"
version = "0.1.0"
description = "Automated Security Compliance Framework for Cloud Infrastructure"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
boto3 = "^1.26.0"
pydantic = "^1.8.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pyyaml = "^6.0"
psycopg2-binary = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 